SERVER-33749 Add idleSessionTimeout flag