src/mongo/shell/shell_options.h
@@ -80,6 +80,7 @@ struct ShellGlobalParams {
 
     int jsHeapLimitMB = 0;
     bool nokillop = false;
+    Seconds idleSessionTimeout = Seconds{0};
 };
 
 extern ShellGlobalParams shellGlobalParams;
